test/negative/t19.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : y:int -> int -> int[@@gospel {| r = f ~y y|}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

val f : y:int -> int -> int
(*@ r = f ~y y
     *)
File "t19.mli", line 12, characters 10-11:
Error: The variable `y' is duplicated in this pattern.
